--- a/index.html
+++ b/index.html
@@ -3,19 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Simple Website</title>
-    <link rel="stylesheet" href="style.css" />
-    <script>
-      function showHide(elementId) {
-        var element = document.getElementById(elementId);
-        if (element.style.display === "none") {
-          element.style.display = "block";
-        } else {
-          element.style.display = "none";
-        }
-      }
-    </script>
+    <link rel="stylesheet" href="style.css"/>
   </head>
   <body>
     <header id="navbar">
@@ -32,20 +22,70 @@
       <h3>Here are all the steps on how to create a website!</h3>
     </div>
     <details>
-      <summary><h3>Zusammenfassung Punkt 1</h3></summary>
-      <span><h4>Hier kommt der ausführliche Inhalt zum Punkt 1</h4></span>
+      <summary><h3>Vorlesung 1</h3></summary>
+      <span><h4>erayherguel01.txt</h4></span>
+      <span><h4>erayherguel02.txt</h4></span>
     </details>
     <details>
-      <summary><h3>Zusammenfassung Punkt 1</h3></summary>
-      <span><h4>Hier kommt der ausführliche Inhalt zum Punkt 1</h4></span>
+      <summary><h3>Vorlesung 2</h3></summary>
+      <span><h4>erayherguel01.html</h4></span>
+      <span><h4>erayherguel02.html</h4></span>
+      <span><h4>erayherguel03.html</h4></span>
+      <span><h4>erayherguel04.html</h4></span>
+      <span><h4>erayherguel05.html</h4></span>
+      <span><h4>erayherguel06.html</h4></span>
     </details>
     <details>
-      <summary><h3>Zusammenfassung Punkt 1</h3></summary>
-      <span><h4>Hier kommt der ausführliche Inhalt zum Punkt 1</h4></span>
+      <summary><h3>Vorlesung 3</h3></summary>
+      <span><h4>erayherguel07.html</h4></span>
+      <span><h4>erayherguel08.html</h4></span>
+      <span><h4>erayherguel09.html</h4></span>
+      <span><h4>erayherguel10.html</h4></span>
+      <span><h4>erayherguel11.html</h4></span>
     </details>
     <details>
-      <summary><h3>Zusammenfassung Punkt 1</h3></summary>
-      <span><h4>Hier kommt der ausführliche Inhalt zum Punkt 1</h4></span>
+      <summary><h3>Vorlesung 4</h3></summary>
+      <span><h4>erayherguel12.html</h4></span>
+      <span><h4>erayherguel13.html</h4></span>
+    </details>
+    <details>
+      <summary><h3>Vorlesung 5</h3></summary>
+      <span><h4>erayherguel14.html</h4></span>
+      <span><h4>erayherguel15.html</h4></span>
+      <span><h4>erayherguel16.html</h4></span>
+      <span><h4>erayherguel17.html</h4></span>
+      <span><h4>erayherguel19.html</h4></span>
+      <span><h4>erayherguel21.html</h4></span>
+      <span><h4>erayherguel22.html</h4></span>
+    </details>
+    <details>
+      <summary><h3>Vorlesung 6</h3></summary>
+      <span><h4>erayherguel23.html</h4></span>
+      <span><h4>erayherguel24.html</h4></span>
+      <span><h4>erayherguel25.html</h4></span>
+      <span><h4>erayherguel26.html</h4></span>
+      <span><h4>erayherguel27.html</h4></span>
+      <span><h4>erayherguel28.html</h4></span>
+      <span><h4>erayherguel29.html</h4></span>
+      <span><h4>erayherguel30.html</h4></span>
+      <span><h4>erayherguel31.html</h4></span>
+      <span><h4>erayherguel32.html</h4></span>
+    </details>
+    <details>
+      <summary><h3>Vorlesung 7</h3></summary>
+      <span><h4>erayherguel33.html</h4></span>
+      <span><h4>erayherguel34.html</h4></span>
+      <span><h4>erayherguel35.html</h4></span>
+      <span><h4>erayherguel36.html</h4></span>
+      <span><h4>erayherguel37.html</h4></span>
+      <span><h4>erayherguel38.html</h4></span>
+      <span><h4>erayherguel39.html</h4></span>
+      <span><h4>erayherguel40.html</h4></span>
+      <span><h4>erayherguel41.html</h4></span>
+    </details>
+    <details>
+      <summary><h3>Vorlesung 8</h3></summary>
+      <span><h4>erayherguel42.html</h4></span>
     </details>
   </body>
 </html>
