--- a/index.html
+++ b/index.html
@@ -17,14 +17,15 @@
           <div id="right-components" class="menu">
             <div id="component1" class="menu-item"><a href="#">Tutorial</a></div>
             <div id="component2" class="menu-item"><a href="tscheck_it.html">Tscheck_it</a></div>
-            <div id="component3" class="menu-item"><a href="#">About</a></div>
-            <div id="component4" class="menu-item"><a href="#">Content</a></div>
+            <div id="component3" class="menu-item"><a href="about.html">About</a></div>
+            <div id="component4" class="menu-item"><a href="content.html">Content</a></div>
             <label id="close" for="menu-toggle">&#9587;</label>
         </header>
     <div id="main-content">
       <h1>Tutorial</h1>
       <h3>Here are all the steps on how to create a website!</h3>
     </div>
+    <hr>
     <details>
       <summary><h3>Vorlesung 1</h3></summary>
       <span><a href="tutorial/erayherguel01.txt"><h4>erayherguel01.txt</h4></a></span>
