--- a/hergueleray_info01.html
+++ b/hergueleray_info01.html
@@ -4,34 +4,46 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Simple Website</title>
-    <link rel="stylesheet" href="about.css"/>
+    <title>FP - About</title>
+    <link rel="stylesheet" href="hergueleray_info01.css"/>
+    <link rel="icon" href="images/Logo_website.png">
   </head>
   <body>
-      <header id="navbar" class="top-nav">
-        <img id="headline" src="images/Logo_Website.png" alt="Logo">
-        <input id="menu-toggle" type="checkbox">
-            <label class="menu-button-container" for="menu-toggle">
-                <span class="menu-button">&#9776;</span>
-            </label>
+    <header id="navbar" class="top-nav">
+      <!--The logo image-->
+      <img id="headline" src="images/Logo_Website.png" alt="Logo">
+      <!--The toggle menu button-->
+      <input id="menu-toggle" type="checkbox">
+          <!--The label for the menu button-->
+          <label class="menu-button-container" for="menu-toggle">
+              <!--The menu button-->
+              <span class="menu-button">&#9776;</span>
+          </label>
+        <!--The menu items-->
           <div id="right-components" class="menu">
             <div id="component1" class="menu-item"><a href="index.html">Tutorial</a></div>
-            <div id="component2" class="menu-item"><a href="tscheck_it.html">Tscheck_it</a></div>
+            <div id="component2" class="menu-item"><a href="hergueleray_tscheckit01.html">Tscheck_it</a></div>
             <div id="component3" class="menu-item"><a href="#">About</a></div>
-            <div id="component4" class="menu-item"><a href="content.html">Content</a></div>
+            <div id="component4" class="menu-item"><a href="hergueleray_content01.html">Content</a></div>
             <label id="close" for="menu-toggle">&#9587;</label>
         </header>
+         <!-- The div class for main content -->
     <div id="main-content">
       <h1>About me</h1>
         <hr>
     </div>
+    <!-- The div class for image -->
+        <div id="img-box">
+          <img id="img" src="images/ErayHerguel.png" alt="ErayHerguel">
+        </div>
+        <!-- The div class for text -->
         <div id="text-content">
-            <h2>Persönliche Informationen</h2>
+            <h3>Persönliche Informationen</h3>
             <p><b>Name:</b> Eray Hergül</p>
             <p><b>Geburtsdatum:</b> 12.10.2001</p>
             <p><b>Wohnort:</b> Schorndorf</p>
             <hr>
-            <h2>Interessen</h2>
+            <h3>Interessen</h3>
             <ul>
               <li>Basketball</li>
               <li>Design</li>
@@ -39,16 +51,16 @@
               <li>Autos</li>
             </ul>
             <hr>
-            <h2>Kontakt</h2>
+            <h3>Kontakt</h3>
             <p><b>E-Mail:</b> eray.herguel@hfg.design</p>
             <hr>
-            <h2>Vor IoT</h2>
+            <h3>Vor IoT</h3>
             <p>Vor dem Studiengang IoT habe ich 2 Semester Wirtschaftsinformatik und 4 Semester Wirtschaftsrecht studiert</p>
             <hr>
-            <h2>Warum Iot</h2>
+            <h3>Warum Iot</h3>
             <p>Nachdem ich die Semesterprojekte des Studienganges IoT auf der Semesterausstellung entdeckt habe wurde mein Interesse an den Studiengang geweckt. Nach reichlicher Recherche beschloss ich schlussendlich mich für den Studiengang zu bewerben.</p>
             <hr>
-            <h2>Kentnisse in Programmiersprachen</h2>
+            <h3>Programmiersprachen Kentnisse</h3>
             <ul>
                 <li>Java</li>
                 <li>Javascript</li>
