--- a/hergueleray_tscheckit01.html
+++ b/hergueleray_tscheckit01.html
@@ -4,27 +4,35 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>IOT WS 22/23 - tscheck-it Fragen und Antworten</title>
-    <link rel="stylesheet" href="tscheck_it.css" />
+    <title>FP - Tscheck_it</title>
+    <link rel="stylesheet" href="hergueleray_tscheckit01.css" />
+    <link rel="icon" href="images/Logo_website.png">
   </head>
   <body>
     <header id="navbar" class="top-nav">
+      <!--The logo image-->
       <img id="headline" src="images/Logo_Website.png" alt="Logo">
+      <!--The toggle menu button-->
       <input id="menu-toggle" type="checkbox">
+          <!--The label for the menu button-->
           <label class="menu-button-container" for="menu-toggle">
+              <!--The menu button-->
               <span class="menu-button">&#9776;</span>
           </label>
+        <!--The menu items-->
         <div id="right-components" class="menu">
           <div id="component1" class="menu-item"><a href="index.html">Tutorial</a></div>
           <div id="component2" class="menu-item"><a href="#">Tscheck_it</a></div>
-          <div id="component3" class="menu-item"><a href="about.html">About</a></div>
-          <div id="component4" class="menu-item"><a href="content.html">Content</a></div>
+          <div id="component3" class="menu-item"><a href="hergueleray_info01.html">About</a></div>
+          <div id="component4" class="menu-item"><a href="hergueleray_content01.html">Content</a></div>
           <label id="close" for="menu-toggle">&#9587;</label>
       </header>
+      <!-- The div class for main content -->
     <div id="main-content">
       <h1>tscheck-it questions</h1>
     </div>
     <hr />
+    <!-- summary to sort all the questions and answers -->
     <details>
       <summary>
         <h3>
@@ -32,7 +40,7 @@
         </h3>
         <hr>
         <h3>
-          11.10.22
+          11.10.2022
         </h3>
       </summary>
       <span>
@@ -102,7 +110,7 @@
       </span>
       <span>
         <h4>
-          Felix: Ich habe heute gelernt, dass vorgemachte Lasagne im Kühlschrank im Ofen aufgewärmt richtig lecker schmeckt.        </h4>
+          Felix: Ich habe heute gelernt, dass vorgemachte Lasagne im Kühlschrank im Ofen aufgewärmt richtig lecker schmeckt.</h4>
       </span>
       <span>
         <h4>
@@ -165,7 +173,7 @@
         </h3>
         <hr>
         <h3>
-          08. 11. 2022
+          08.11.2022
         </h3>
       </summary>
       <span>
