--- a/index.html
+++ b/index.html
@@ -4,28 +4,36 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Simple Website</title>
+    <title>Final Project</title>
     <link rel="stylesheet" href="style.css"/>
+    <link rel="icon" href="images/Logo_website.png">
   </head>
   <body>
-      <header id="navbar" class="top-nav">
-        <img id="headline" src="images/Logo_Website.png" alt="Logo">
-        <input id="menu-toggle" type="checkbox">
-            <label class="menu-button-container" for="menu-toggle">
-                <span class="menu-button">&#9776;</span>
-            </label>
+    <header id="navbar" class="top-nav">
+      <!--The logo image-->
+      <img id="headline" src="images/Logo_Website.png" alt="Logo">
+      <!--The toggle menu button-->
+      <input id="menu-toggle" type="checkbox">
+          <!--The label for the menu button-->
+          <label class="menu-button-container" for="menu-toggle">
+              <!--The menu button-->
+              <span class="menu-button">&#9776;</span>
+          </label>
+        <!--The menu items-->
           <div id="right-components" class="menu">
             <div id="component1" class="menu-item"><a href="#">Tutorial</a></div>
-            <div id="component2" class="menu-item"><a href="tscheck_it.html">Tscheck_it</a></div>
-            <div id="component3" class="menu-item"><a href="about.html">About</a></div>
-            <div id="component4" class="menu-item"><a href="content.html">Content</a></div>
+            <div id="component2" class="menu-item"><a href="hergueleray_tscheckit01.html">Tscheck_it</a></div>
+            <div id="component3" class="menu-item"><a href="hergueleray_info01.html">About</a></div>
+            <div id="component4" class="menu-item"><a href="hergueleray_content01.html">Content</a></div>
             <label id="close" for="menu-toggle">&#9587;</label>
         </header>
+        <!-- The div class for main-content -->
     <div id="main-content">
       <h1>Tutorial</h1>
       <h3>Here are all the steps on how to create a website!</h3>
     </div>
     <hr>
+    <!-- summary to sort all the html files -->
     <details>
       <summary><h3>Vorlesung 1</h3></summary>
       <span><a href="tutorial/erayherguel01.txt"><h4>erayherguel01.txt</h4></a></span>
@@ -33,68 +41,68 @@
     </details>
     <details>
       <summary><h3>Vorlesung 2</h3></summary>
-      <span><a href="tutorial/hergueleray01.html"><h4>erayherguel01.html</h4></a></span>
-      <span><a href="tutorial/hergueleray02.html"><h4>erayherguel02.html</h4></a></span>
-      <span><a href="tutorial/hergueleray03.html"><h4>erayherguel03.html</h4></a></span>
-      <span><a href="tutorial/hergueleray04.html"><h4>erayherguel04.html</h4></a></span>
-      <span><a href="tutorial/hergueleray05.html"><h4>erayherguel05.html</h4></a></span>
-      <span><a href="tutorial/hergueleray06.html"><h4>erayherguel06.html</h4></a></span>
+      <span><a href="tutorial/hergueleray01.html" target="_blank"><h4>erayherguel01.html</h4></a></span>
+      <span><a href="tutorial/hergueleray02.html" target="_blank"><h4>erayherguel02.html</h4></a></span>
+      <span><a href="tutorial/hergueleray03.html" target="_blank"><h4>erayherguel03.html</h4></a></span>
+      <span><a href="tutorial/hergueleray04.html" target="_blank"><h4>erayherguel04.html</h4></a></span>
+      <span><a href="tutorial/hergueleray05.html" target="_blank"><h4>erayherguel05.html</h4></a></span>
+      <span><a href="tutorial/hergueleray06.html" target="_blank"><h4>erayherguel06.html</h4></a></span>
     </details>
     <details>
       <summary><h3>Vorlesung 3</h3></summary>
-      <span><a href="tutorial/hergueleray07.html"><h4>erayherguel07.html</h4></a></span>
-      <span><a href="tutorial/hergueleray08.html"><h4>erayherguel08.html</h4></a></span>
-      <span><a href="tutorial/hergueleray09.html"><h4>erayherguel09.html</h4></a></span>
-      <span><a href="tutorial/hergueleray10.html"><h4>erayherguel10.html</h4></a></span>
-      <span><a href="tutorial/hergueleray11.html"><h4>erayherguel11.html</h4></a></span>
+      <span><a href="tutorial/hergueleray07.html" target="_blank"><h4>erayherguel07.html</h4></a></span>
+      <span><a href="tutorial/hergueleray08.html" target="_blank"><h4>erayherguel08.html</h4></a></span>
+      <span><a href="tutorial/hergueleray09.html" target="_blank"><h4>erayherguel09.html</h4></a></span>
+      <span><a href="tutorial/hergueleray10.html" target="_blank"><h4>erayherguel10.html</h4></a></span>
+      <span><a href="tutorial/hergueleray11.html" target="_blank"><h4>erayherguel11.html</h4></a></span>
     </details>
     <details>
       <summary><h3>Vorlesung 4</h3></summary>
-      <span><a href="tutorial/hergueleray12.html"><h4>erayherguel12.html</h4></a></span>
-      <span><a href="tutorial/hergueleray13.html"><h4>erayherguel13.html</h4></a></span>
+      <span><a href="tutorial/hergueleray12.html" target="_blank"><h4>erayherguel12.html</h4></a></span>
+      <span><a href="tutorial/hergueleray13.html" target="_blank"><h4>erayherguel13.html</h4></a></span>
     </details>
     <details>
       <summary><h3>Vorlesung 5</h3></summary>
-      <span><a href="tutorial/hergueleray14.html"><h4>erayherguel14.html</h4></a></span>
-      <span><a href="tutorial/hergueleray15.html"><h4>erayherguel15.html</h4></a></span>
-      <span><a href="tutorial/hergueleray16.html"><h4>erayherguel16.html</h4></a></span>
-      <span><a href="tutorial/hergueleray17.html"><h4>erayherguel17.html</h4></a></span>
-      <span><a href="tutorial/hergueleray19.html"><h4>erayherguel19.html</h4></a></span>
-      <span><a href="tutorial/hergueleray21.html"><h4>erayherguel21.html</h4></a></span>
-      <span><a href="tutorial/hergueleray22.html"><h4>erayherguel22.html</h4></a></span>
+      <span><a href="tutorial/hergueleray14.html" target="_blank"><h4>erayherguel14.html</h4></a></span>
+      <span><a href="tutorial/hergueleray15.html" target="_blank"><h4>erayherguel15.html</h4></a></span>
+      <span><a href="tutorial/hergueleray16.html" target="_blank"><h4>erayherguel16.html</h4></a></span>
+      <span><a href="tutorial/hergueleray17.html" target="_blank"><h4>erayherguel17.html</h4></a></span>
+      <span><a href="tutorial/hergueleray19.html" target="_blank"><h4>erayherguel19.html</h4></a></span>
+      <span><a href="tutorial/hergueleray21.html" target="_blank"><h4>erayherguel21.html</h4></a></span>
+      <span><a href="tutorial/hergueleray22.html" target="_blank"><h4>erayherguel22.html</h4></a></span>
     </details>
     <details>
       <summary><h3>Vorlesung 6</h3></summary>
-      <span><a href="tutorial/hergueleray18.html"><h4>erayherguel18.html</h4></a></span>
-      <span><a href="tutorial/hergueleray20.html"><h4>erayherguel20.html</h4></a></span>
-      <span><a href="tutorial/hergueleray21.html"><h4>erayherguel21.html</h4></a></span>
-      <span><a href="tutorial/hergueleray22.html"><h4>erayherguel22.html</h4></a></span>
-      <span><a href="tutorial/hergueleray23.html"><h4>erayherguel23.html</h4></a></span>
-      <span><a href="tutorial/hergueleray24.html"><h4>erayherguel24.html</h4></a></span>
-      <span><a href="tutorial/hergueleray25.html"><h4>erayherguel25.html</h4></a></span>
-      <span><a href="tutorial/hergueleray26.html"><h4>erayherguel26.html</h4></a></span>
-      <span><a href="tutorial/hergueleray27.html"><h4>erayherguel27.html</h4></a></span>
-      <span><a href="tutorial/hergueleray28.html"><h4>erayherguel28.html</h4></a></span>
-      <span><a href="tutorial/hergueleray29.html"><h4>erayherguel29.html</h4></a></span>
-      <span><a href="tutorial/hergueleray30.html"><h4>erayherguel30.html</h4></a></span>
-      <span><a href="tutorial/hergueleray31.html"><h4>erayherguel31.html</h4></a></span>
-      <span><a href="tutorial/hergueleray32.html"><h4>erayherguel32.html</h4></a></span>
+      <span><a href="tutorial/hergueleray18.html" target="_blank"><h4>erayherguel18.html</h4></a></span>
+      <span><a href="tutorial/hergueleray20.html" target="_blank"><h4>erayherguel20.html</h4></a></span>
+      <span><a href="tutorial/hergueleray21.html" target="_blank"><h4>erayherguel21.html</h4></a></span>
+      <span><a href="tutorial/hergueleray22.html" target="_blank"><h4>erayherguel22.html</h4></a></span>
+      <span><a href="tutorial/hergueleray23.html" target="_blank"><h4>erayherguel23.html</h4></a></span>
+      <span><a href="tutorial/hergueleray24.html" target="_blank"><h4>erayherguel24.html</h4></a></span>
+      <span><a href="tutorial/hergueleray25.html" target="_blank"><h4>erayherguel25.html</h4></a></span>
+      <span><a href="tutorial/hergueleray26.html" target="_blank"><h4>erayherguel26.html</h4></a></span>
+      <span><a href="tutorial/hergueleray27.html" target="_blank"><h4>erayherguel27.html</h4></a></span>
+      <span><a href="tutorial/hergueleray28.html" target="_blank"><h4>erayherguel28.html</h4></a></span>
+      <span><a href="tutorial/hergueleray29.html" target="_blank"><h4>erayherguel29.html</h4></a></span>
+      <span><a href="tutorial/hergueleray30.html" target="_blank"><h4>erayherguel30.html</h4></a></span>
+      <span><a href="tutorial/hergueleray31.html" target="_blank"><h4>erayherguel31.html</h4></a></span>
+      <span><a href="tutorial/hergueleray32.html" target="_blank"><h4>erayherguel32.html</h4></a></span>
     </details>
     <details>
       <summary><h3>Vorlesung 7</h3></summary>
-      <span><a href="tutorial/hergueleray33.html"><h4>erayherguel33.html</h4></a></span>
-      <span><a href="tutorial/hergueleray34.html"><h4>erayherguel34.html</h4></a></span>
-      <span><a href="tutorial/hergueleray35.html"><h4>erayherguel35.html</h4></a></span>
-      <span><a href="tutorial/hergueleray36.html"><h4>erayherguel36.html</h4></a></span>
-      <span><a href="tutorial/hergueleray37.html"><h4>erayherguel37.html</h4></a></span>
-      <span><a href="tutorial/hergueleray38.html"><h4>erayherguel38.html</h4></a></span>
-      <span><a href="tutorial/hergueleray39.html"><h4>erayherguel39.html</h4></a></span>
-      <span><a href="tutorial/hergueleray40.html"><h4>erayherguel40.html</h4></a></span>
-      <span><a href="tutorial/hergueleray41.html"><h4>erayherguel41.html</h4></a></span>
+      <span><a href="tutorial/hergueleray33.html" target="_blank"><h4>erayherguel33.html</h4></a></span>
+      <span><a href="tutorial/hergueleray34.html" target="_blank"><h4>erayherguel34.html</h4></a></span>
+      <span><a href="tutorial/hergueleray35.html" target="_blank"><h4>erayherguel35.html</h4></a></span>
+      <span><a href="tutorial/hergueleray36.html" target="_blank"><h4>erayherguel36.html</h4></a></span>
+      <span><a href="tutorial/hergueleray37.html" target="_blank"><h4>erayherguel37.html</h4></a></span>
+      <span><a href="tutorial/hergueleray38.html" target="_blank"><h4>erayherguel38.html</h4></a></span>
+      <span><a href="tutorial/hergueleray39.html" target="_blank"><h4>erayherguel39.html</h4></a></span>
+      <span><a href="tutorial/hergueleray40.html" target="_blank"><h4>erayherguel40.html</h4></a></span>
+      <span><a href="tutorial/hergueleray41.html" target="_blank"><h4>erayherguel41.html</h4></a></span>
     </details>
     <details>
       <summary><h3>Vorlesung 8</h3></summary>
-      <span><a href="tutorial/hergueleray43.html"><h4>erayherguel43.html</h4></a></span>
+      <span><a href="tutorial/hergueleray43.html" target="_blank"><h4>erayherguel43.html</h4></a></span>
     </details>
   </body>
 </html>
