--- a/hergueleray_info01.html
+++ b/hergueleray_info01.html
@@ -11,7 +11,7 @@
   <body>
     <header id="navbar" class="top-nav">
       <!--The logo image-->
-      <img id="headline" src="images/Logo_Website.png" alt="Logo">
+      <a href="index.html"><img id="headline" src="images/Logo_Website.png" alt="Logo" style="margin-left: 5px;"></a>
       <!--The toggle menu button-->
       <input id="menu-toggle" type="checkbox">
           <!--The label for the menu button-->
