--- a/hergueleray_tscheckit01.html
+++ b/hergueleray_tscheckit01.html
@@ -11,8 +11,8 @@
   <body>
     <header id="navbar" class="top-nav">
       <!--The logo image-->
-      <img id="headline" src="images/Logo_Website.png" alt="Logo">
-      <!--The toggle menu button-->
+      <a href="index.html"><img id="headline" src="images/Logo_Website.png" alt="Logo" style="margin-left: 5px;"></a>      
+            <!--The toggle menu button-->
       <input id="menu-toggle" type="checkbox">
           <!--The label for the menu button-->
           <label class="menu-button-container" for="menu-toggle">
